[project]
name = "ukhsa-asap"
version = "0.1.0"
description = "Import data from the UKHSA data dashboard via the API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
    "urllib3>=2.5.0",
]
